src/App.css
html, body {
  height: 100%;
  width: 100%;
  margin: 0px;
}

.App {
  min-width: 360px;
  height: 100%;
  width: 100%;
  margin: 0%;
  padding-left: 25vw;
}

.App-sidebar {
  overflow-y: auto;
  position: absolute;
  left: 0;
  width: 25vw;
  height: 100%;
  border-right: 1px solid #ddd;
  background-color: #efefef;
}

.App-sidebar-controls {
  display: none;
  width: 0;
  background-color: #eaeaea;
  border-left: 1px solid #e5e5e5;
}

.App-sidebar-content {
  width: 100%;
  height: 100%;
  margin: 0px;
}

.App-main {
  overflow-y: auto;
  padding: 1em 2em;
  width: 100%;
}

.App-logo {
  display: block;
  animation: App-logo-spin infinite 5s linear;
  height: 80px;
  margin: 0 auto;
}

.App-sidebar-menu-icon {
  margin-top: 8px;
  color: #333;
  cursor: pointer;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

@media (max-width: 768px) {
  .App {

  }

  .App-sidebar {
    padding-right: 50px;
  }

  .App-sidebar-controls {
    display: block;
    position: absolute;
    right: 0;
    width: 50px;
    height: 100%;
    text-align: center;
  }

  .App-sidebar.collapsed {
    width: 50px;
  }

  .App-sidebar.expanded {
    min-width: 300px;
  }

  .App-sidebar.collapsed .App-sidebar-content {
    display: none;
  }

  .App-sidebar.expanded .App-sidebar-content {
    display: block;
  }
}

